# hector_rough_terrain_planning

./: README.md
flor_atlas_msgs/: CMakeLists.txt  package.xml
flor_atlas_msgs/msg/: AtlasBehaviorFootData.msg  AtlasBehaviorStepAction.msg  AtlasBehaviorStepData.msg  AtlasBehaviorStepFeedback.msg  AtlasBehaviorStepParams.msg  AtlasBehaviorStepSpec.msg  AtlasBehaviorWalkAction.msg  AtlasBehaviorWalkFeedback.msg  AtlasBehaviorWalkParams.msg  AtlasBehaviorWalkSpec.msg  AtlasHandMass.msg  AtlasHandPower.msg
flor_footstep_plan_transformer/: CMakeLists.txt  mainpage.dox  manifest.xml
flor_footstep_plan_transformer/include/flor_footstep_plan_transformer/: footstep_plan_transformer.h
flor_footstep_plan_transformer/launch/: footstep_plan_transformer.launch
flor_footstep_plan_transformer/src/: footstep_plan_transformer.cpp  footstep_plan_transformer_node.cpp
flor_footstep_plan_vis/: CMakeLists.txt  manifest.xml
flor_footstep_plan_vis/src/: flor_footstep_plan_vis.cpp
flor_footstep_planner_msgs/: CMakeLists.txt  manifest.xml
flor_footstep_planner_msgs/msg/: AtlasStepFootstepPlan.msg  AtlasWalkFootstepPlan.msg  FeetPoses.msg  FootstepPlan.msg  FootstepPlannerParams.msg  StepTarget.msg  Stepping.msg  SteppingRequest.msg
flor_footstep_planner_msgs/src/: flor_footstep_planner_msgs.cpp
flor_footstep_planner_msgs/srv/: PlanFootsteps.srv  (+6 more)
flor_planning_msgs/: CMakeLists.txt  package.xml
flor_terrain_classifier/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
flor_terrain_classifier/include/flor_terrain_classifier/: pcl_math_utils.h  terrain_classifier.h  terrain_classifier_node.h  terrain_model.h
flor_terrain_classifier/launch/: rviz_terrain_classifier.launch  terrain_classifier.launch  terrain_classifier_drc_default.launch
flor_terrain_classifier/msg/: TerrainModel.msg  TerrainModelRequest.msg  TestModel.msg
flor_terrain_classifier/pointclouds/: simple_ramp.py  small_step.py
flor_terrain_classifier/pointclouds/depricated/: #konststeigend_x.pcd#  #zwei_ebenen_steigend.pcd#  screenshot-1395910037.cam  stairs_gen.py  stepfield_gen.py  test_gen.py  test_gen2.py
flor_terrain_classifier/rviz/: terrain_classifier.rviz
flor_terrain_classifier/src/: pcl_math_utils.cpp  terrain_classifier.cpp  terrain_classifier_node.cpp  terrain_classifier_test.cpp  terrain_model.cpp
flor_terrain_classifier/srv/: TerrainModelService.srv  TestModelService.srv
flor_walk_monitor/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
footstep_planner/: CMakeLists.txt  manifest.xml
footstep_planner/config/: atlas_params.yaml  footsteps_atlas.yaml  ros_footstep_planner_params.yaml  standard.gpr  step_cost.map
footstep_planner/include/footstep_planner/: Footstep.h  FootstepNavigation.h  FootstepPlanner.h  FootstepPlannerEnvironment.h  FootstepPlannerNode.h  PlanningState.h  State.h  helper.h  terrain_model.h
footstep_planner/include/footstep_planner/heuristics/: Heuristic.h  PathCostHeuristic.h
footstep_planner/include/footstep_planner/step_cost_estimators/: boundary_step_cost_estimator.h  const_step_cost_estimator.h  dynamics_step_cost_estimator.h  euclidean_step_cost_estimator.h  gpr_step_cost_estimator.h  ground_contact_step_cost_estimator.h  map_step_cost_estimator.h  step_cost_estimator.h  step_cost_key.h
footstep_planner/launch/: footstep_planner_test.launch  rviz_testing.launch
footstep_planner/rviz/: footstep_planner_drc.rviz  footstep_planner_testing.rviz  footstep_sampler.rviz
footstep_planner/src/: Footstep.cpp  FootstepNavigation.cpp  FootstepPlanner.cpp  FootstepPlannerEnvironment.cpp  FootstepPlannerNode.cpp  PlanningState.cpp  State.cpp  footstep_navigation.cpp  footstep_planner.cpp  footstep_planner_walls.cpp  helper.cpp  terrain_model.cpp
footstep_planner/src/heuristics/: Heuristic.cpp  PathCostHeuristic.cpp
footstep_planner/src/step_cost_estimators/: boundary_step_cost_estimator.cpp  const_step_cost_estimator.cpp  dynamics_step_cost_estimator.cpp  euclidean_step_cost_estimator.cpp  gpr_step_cost_estimator.cpp  ground_contact_step_cost_estimator.cpp  map_step_cost_estimator.cpp  step_cost_estimator.cpp  step_cost_key.cpp
hector_ground_contact_estimator/: .gitignore  CMakeLists.txt  package.xml
hector_ground_contact_estimator/config/: hector_ground_contact_estimator.cfg  terrain_classifier.yaml
hector_ground_contact_estimator/include/hector_ground_contact_estimator/: ground_contact_estimator.h  pcl_math_utils.h  terrain_classifier.h  terrain_classifier_node.h  terrain_model.h
hector_ground_contact_estimator/launch/: terrain_classifier_test.launch
hector_ground_contact_estimator/pointclouds/: barrier_left.py  dach_global.py
hector_ground_contact_estimator/src/: ground_contact_estimator.cpp  ground_contact_estimator_test.cpp  pcl_math_utils.cpp  terrain_classifier.cpp  terrain_classifier_node.cpp  terrain_classifier_test.cpp  terrain_model.cpp
hector_ground_contact_estimator/srv/: TerrainModelService.srv  TestModelService.srv
hector_sbpl_planner_test/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~  package.xml
hector_sbpl_planner_test/catkin_generated/: generate_cached_setup.py
hector_sbpl_planner_test/catkin_generated/installspace/: _setup_util.py
hector_sbpl_planner_test/launch/: basic_test.launch
hector_sbpl_planner_test/rviz_config/: hector_sbpl_planner_test.rviz
hector_sbpl_planner_test/src/: planner_test.cpp
hector_sbpl_terrain_planner/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  package.xml~
hector_terrain_preprocessor/: CMakeLists.txt
humanoid_nav_msgs/: CMakeLists.txt  manifest.xml  package.xml
humanoid_nav_msgs/src/humanoid_nav_msgs/msg/: _ExecFootstepsAction.py  _ExecFootstepsActionFeedback.py  _ExecFootstepsActionGoal.py  _ExecFootstepsActionResult.py  _ExecFootstepsFeedback.py  _ExecFootstepsGoal.py  _ExecFootstepsResult.py  _StepTarget.py  __init__.py
humanoid_nav_msgs/src/humanoid_nav_msgs/srv/: _ClipFootstep.py  _LocalizeFromPointCloud.py  _PlanFootsteps.py  _StepTargetService.py  __init__.py
humanoid_nav_msgs/srv/: LocalizeFromPointCloud.srv
(+73 files in other folders)
