<?xml version="1.0"?>
<package>
  <name>hector_sbpl_planner_test</name>
  <version>0.0.0</version>
  <description>hector_sbpl_planner_test</description>
  <maintainer email="kevin.daun@stud.tu-darmstadt.de">Kevin Daun</maintainer>
  <author>Stefan Kohlbrecher, Kevin Daun und Johannes Schubert</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/hector_sbpl_planner_test</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hector_sbpl_terrain_planner</build_depend>
  <build_depend>flor_terrain_classifier</build_depend>

  <run_depend>hector_sbpl_terrain_planner</run_depend>
  <run_depend>flor_terrain_classifier</run_depend>

</package>


