<package>
   <name>humanoid_nav_msgs</name>
   <version>1.0</version>
   <description> 
     Messages and services for humanoid robot navigation
   </description>
   <maintainer email="hornunga@informatik.uni-freiburg.de">Armin Hornung</maintainer>
   <license>BSD</license>

<build_depend>message_generation</build_depend>
<run_depend>message_runtime</run_depend>


</package>
